--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,7 +10,8 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - run: python3 -m pip install --upgrade build && python3 -m build
+      - run: python3 -m pip install --upgrade build poetry
+      - run: python3 -m poetry build
       - name: Publish package
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
