--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ python = "^3.7"
 [tool.poetry.group.dev.dependencies]
 pytest-cov = "^4.0.0"
 mypy = "^0.991"
+black = {version = "^22.10.0", allow-prereleases = true}
 
 [build-system]
 requires = ["poetry-core"]
