--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,11 @@
 [tool.poetry]
 name = "json-codec"
-version = "0.1.3"
+version = "0.1.4"
 description = ""
 authors = ["Lucas Silva <lucas76leonardo@gmail.com>"]
 readme = "README.md"
 packages = [{include = "json_codec"}]
+repository = "https://github.com/LuscasLeo/json_codec"
 
 [tool.poetry.dependencies]
 python = "^3.7"
@@ -13,7 +14,7 @@ python = "^3.7"
 [tool.poetry.group.dev.dependencies]
 pytest-cov = "^4.0.0"
 mypy = "^0.991"
-black = {version = "^22.10.0", allow-prereleases = true}
+black = "^22.10.0"
 
 [build-system]
 requires = ["poetry-core"]
